<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.openhtmltopdf</groupId>
  <artifactId>openhtmltopdf-parent</artifactId>
  <version>${revision}</version>
  <inceptionYear>2004</inceptionYear>

  <packaging>pom</packaging>

  <name>Openhtmltopdf</name>
  <description>Open-HTML-to-PDF is a HTML and CSS renderer written in Java.  It supports Java2D and PDF output. Open-HTML-to-PDF is a fork of Flying-saucer with additional features.</description>
  <url>https://github.com/openhtmltopdf/openhtmltopdf</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License (LGPL), version 2.1 or later</name>
      <url>https://www.gnu.org/licenses/lgpl.html</url>
    </license>
  </licenses>

  <modules>
    <module>openhtmltopdf-core</module>
    <module>openhtmltopdf-slf4j</module>
    <module>openhtmltopdf-examples</module>
    <module>openhtmltopdf-pdfbox</module>
    <module>openhtmltopdf-rtl-support</module>
    <module>openhtmltopdf-svg-support</module>
    <module>openhtmltopdf-java2d</module>
    <module>openhtmltopdf-objects</module>
    <module>openhtmltopdf-mathml-support</module>
    <module>openhtmltopdf-latex-support</module>
    <module>openhtmltopdf-pdfa-testing</module>
    <module>openhtmltopdf-templates</module>
  </modules>

  <scm>
    <connection>scm:git:git://github.com/openhtmltopdf/openhtmltopdf.git</connection>
    <developerConnection>scm:git:https://github.com/openhtmltopdf/openhtmltopdf.git</developerConnection>
    <url>git://github.com/openhtmltopdf/openhtmltopdf.git</url>
    <tag>openhtmltopdf-parent-${revision}</tag>
  </scm>

  <developers>
    <developer>
      <id>danfickle</id>
      <name>Daniel Fickling</name>
      <email>newtab@gmail.com</email>
    </developer>
    <developer>
      <id>pdoubleya</id>
      <name>Patrick Wright</name>
      <email>pdoubleya@gmail.com</email>
    </developer>
    <developer>
      <id>peter.brant</id>
      <name>Peter Brant</name>
      <email>peter.brant@gmail.com</email>
    </developer>
    <developer>
      <id>imario42</id>
      <name>Mario Ivankovits</name>
      <email>mario@datenwort.at</email>
    </developer>
    <developer>
      <id>madsop-nav</id>
      <name>Mads Opheim</name>
      <email>mads.opheim@gmail.com</email>
    </developer>
    <developer>
      <id>siegelzc</id>
      <name>Zachary Siegel</name>
      <email>siegelzc@gmail.com</email>
    </developer>
  </developers>

  <profiles>
    <profile>
      <id>github-release</id>
      <activation>
        <property>
          <name>github-release</name>
        </property>
      </activation>
      <distributionManagement>
        <repository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/${env.GITHUB_REPOSITORY}</url>
        </repository>
      </distributionManagement>
    </profile>
    <profile>
      <id>maven-release</id>
      <activation>
        <property>
          <name>!github-release</name>
        </property>
      </activation>
      <distributionManagement>
        <snapshotRepository>
          <id>sonatype-nexus-snapshots</id>
          <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
          <id>sonatype-nexus-staging</id>
          <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
      </distributionManagement>
    </profile>

    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <!-- Prevent gpg from using pinentry programs. Fixes: gpg: signing
                    failed: Inappropriate ioctl for device -->
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                  <passphrase>${env.GPG_PASSPHRASE}</passphrase>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.4.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <tokenAuth>true</tokenAuth>
              <autoPublish>true</autoPublish>
              <excludeArtifacts>
                <excludeArtifact>openhtmltopdf-examples</excludeArtifact>
                <excludeArtifact>openhtmltopdf-pdfa-testing</excludeArtifact>
                <excludeArtifact>openhtmltopdf-templates</excludeArtifact>
              </excludeArtifacts>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.0-M4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
          <configuration>
            <compilerArgs>
              <arg>-Xlint:deprecation</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>5.1.2</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <releaseProfiles>maven-release</releaseProfiles>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <goals>deploy</goals>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <source>8</source>
          <doclint>none</doclint>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.0</version>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.6.0</version>
        <configuration>
          <flattenMode>ossrh</flattenMode>
          <updatePomFile>true</updatePomFile>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <properties>
    <revision>1.1.5-SNAPSHOT</revision> <!-- only used for local development, overriden in github actions -->
    <open.batik.version>1.17</open.batik.version>

    <!-- Please keep xmlgraphics-commons up to date with batik. -->
    <open.xmlgraphics.commons.version>2.9</open.xmlgraphics.commons.version>

    <!-- NOTE: Rhino is an optional dependency of Batik-Bridge. This version should match
         the version specified by Batik-Bridge. -->
    <open.rhino.version>1.7.14</open.rhino.version>

    <open.junit4.version>4.13.1</open.junit4.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>
